Add login and logout functionality

--- a/sellsavvy/src/assets/config.json
+++ b/sellsavvy/src/assets/config.json
@@ -10,6 +10,7 @@
     "reviews": "reviews",
     "users": "users",
     "login": "login",
+    "logout": "users/logout",
     "register": "register"
   }
 }
